Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/Custom_Registration_Configuration__mdt.object-meta.xml
<CustomObject>
    <description
  >Used by the installed package called Configurable Self Registration &amp; Login For Experience Cloud to control the Self Registration form fields.</description>
    <label>Custom Registration Configuration</label>
    <pluralLabel>Custom Registration Configuration</pluralLabel>
</CustomObject>