Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/fields/Field_Icon_Class__c.field-meta.xml
<CustomField>
    <fullName>Field_Icon_Class__c</fullName>
    <label>Field Icon Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>