Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Displayed on the Self Registration form. The form does not display the field
        configuration&apos;s Field Label.</description>
    <inlineHelpText>Displayed on the Self Registration form. The form does not display the field
        configuration&apos;s Field Label.</inlineHelpText>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>