Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/fields/Field_Label_Variant__c.field-meta.xml
<CustomField>
    <fullName>Field_Label_Variant__c</fullName>
    <label>Field Label Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>standard</fullName>
                <default>true</default>
                <label>standard</label>
            </value>
            <value>
                <fullName>label-inline</fullName>
            </value>
            <value>
                <fullName>label-hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>