Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/fields/Field_Max_Length__c.field-meta.xml
<CustomField>
    <fullName>Field_Max_Length__c</fullName>
    <description>The maximum number of characters that can be entered in this field on the form</description>
    <inlineHelpText>The maximum number of characters that can be entered in this field on the form</inlineHelpText>
    <label>Field Max Characters</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>