Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/fields/Field_Message_Too_Short__c.field-meta.xml
<CustomField>
    <fullName>Field_Message_Too_Short__c</fullName>
    <description>Text is displayed if the field value entered is shorter than the specified minimum.</description>
    <inlineHelpText>Text is displayed if the field value entered is shorter than the specified minimum.</inlineHelpText>
    <label>Field Message Too Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>