Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/fields/Field_Min_Length__c.field-meta.xml
<CustomField>
    <fullName>Field_Min_Length__c</fullName>
    <description
  >The minimum number of characters that must be entered in this field on the form</description>
    <inlineHelpText
  >The minimum number of characters that must be entered in this field on the form</inlineHelpText>
    <label>Field Min Characters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>