Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/fields/Field_Show_Password_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Field_Show_Password_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Show Password Visibility</label>
    <type>Checkbox</type>
</CustomField>