Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <defaultValue>&quot;text&quot;</defaultValue>
    <label>Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>checkbox</fullName>
                <isActive>false</isActive>
                <label>checkbox</label>
            </value>
            <value>
                <fullName>checkbox-button</fullName>
                <isActive>false</isActive>
                <label>checkbox-button</label>
            </value>
            <value>
                <fullName>date</fullName>
                <isActive>false</isActive>
                <label>date</label>
            </value>
            <value>
                <fullName>datetime</fullName>
                <isActive>false</isActive>
                <label>datetime</label>
            </value>
            <value>
                <fullName>email</fullName>
                <isActive>false</isActive>
                <label>email</label>
            </value>
            <value>
                <fullName>file</fullName>
                <isActive>false</isActive>
                <label>file</label>
            </value>
            <value>
                <fullName>number</fullName>
                <isActive>false</isActive>
                <label>number</label>
            </value>
            <value>
                <fullName>password</fullName>
                <isActive>false</isActive>
                <label>password</label>
            </value>
            <value>
                <fullName>search</fullName>
                <isActive>false</isActive>
                <label>search</label>
            </value>
            <value>
                <fullName>tel</fullName>
                <isActive>false</isActive>
                <label>tel</label>
            </value>
            <value>
                <fullName>time</fullName>
                <isActive>false</isActive>
                <label>time</label>
            </value>
            <value>
                <fullName>toggle</fullName>
                <isActive>false</isActive>
                <label>toggle</label>
            </value>
            <value>
                <fullName>url</fullName>
                <isActive>false</isActive>
                <label>url</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>