Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/fields/Maximum_Value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Value__c</fullName>
    <description>Supported for number, time, date and datetime fields only. Set the maximum number or latest date that is allowed to be entered.</description>
    <inlineHelpText>Supported for number, time, date and datetime fields only. Set the maximum number or latest date that is allowed to be entered.</inlineHelpText>
    <label>Maximum Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>