Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/fields/Minimum_Value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Value__c</fullName>
    <description
  >Supported for number, time, date and datetime fields only. Set the minimum number or earliest date that is allowed to be entered.</description>
    <inlineHelpText
  >Supported for number, time, date and datetime fields only. Set the minimum number or earliest date that is allowed to be entered.</inlineHelpText>
    <label>Minimum Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>