Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/fields/Portal_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_API_Name__c</fullName>
    <label>Portal API Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>