Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/validationRules/Enable_Password_Show_Hide.validationRule-meta.xml
<ValidationRule>
    <fullName>Enable_Password_Show_Hide</fullName>
    <active>true</active>
    <description>Password Show/Hide can only be implemented on Password Field Types</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Field_Type__c, &quot;password&quot;)), Field_Show_Password_Visibility__c)</errorConditionFormula>
    <errorDisplayField>Field_Show_Password_Visibility__c</errorDisplayField>
    <errorMessage>This functionality can only be enabled when the Field Type is set to &apos;password&apos;</errorMessage>
</ValidationRule>