Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/validationRules/Field_Over_Range_Message.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Over_Range_Message</fullName>
    <active>true</active>
    <description
  >Shows an error if the Maximum Value is set and Field Maximum Minimum Range Message is blank.</description>
    <errorConditionFormula>AND(

OR(
ISPICKVAL(Field_Type__c, &quot;number&quot;),
ISPICKVAL(Field_Type__c, &quot;date&quot;),
ISPICKVAL(Field_Type__c, &quot;datetime&quot;),
ISPICKVAL(Field_Type__c, &quot;time&quot;)
),

ISBLANK(Field_Over_Max_Range_Message__c), 
NOT(ISBLANK(Maximum_Value__c))

)</errorConditionFormula>
    <errorDisplayField>Field_Over_Max_Range_Message__c</errorDisplayField>
    <errorMessage
  >Field Over Max Range Message must be set if Maximum Value is provided.</errorMessage>
</ValidationRule>