Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/validationRules/Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Required</fullName>
    <active>true</active>
    <description>Enforce the population of a Field Required Message if Field Required = TRUE</description>
    <errorConditionFormula>AND(ISBLANK(Field_Required_Message__c ), Field_Required__c)</errorConditionFormula>
    <errorDisplayField>Field_Required_Message__c</errorDisplayField>
    <errorMessage>Field Required Message is also required when setting Field Required to TRUE.</errorMessage>
</ValidationRule>