Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/validationRules/Field_Too_Short.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Too_Short</fullName>
    <active>true</active>
    <description>Enforce the population of a Field Too Short Message if Field Minimum Length is populated.</description>
    <errorConditionFormula>AND(

ISBLANK(Field_Message_Too_Short__c), 
NOT(ISBLANK(Field_Min_Length__c))

)</errorConditionFormula>
    <errorDisplayField>Field_Message_Too_Short__c</errorDisplayField>
    <errorMessage>Field Too Short Message is also required when setting Field Min Length.</errorMessage>
</ValidationRule>