Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/validationRules/Set_Date_Style_for_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_Date_Style_for_Dates</fullName>
    <active>true</active>
    <description>Guides the user to select a date style when using a date field.</description>
    <errorConditionFormula>AND(ISPICKVAL(Field_Type__c, &quot;date&quot;), ISBLANK(TEXT(Field_Date_Style__c)))</errorConditionFormula>
    <errorDisplayField>Field_Date_Style__c</errorDisplayField>
    <errorMessage>You must set a Date Style for a date field.</errorMessage>
</ValidationRule>