Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Registration_Configuration__mdt/listViews/Custom.listView-meta.xml
<ListView>
    <fullName>Custom</fullName>
    <columns>Display_Order__c</columns>
    <columns>Portal_API_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Custom</label>
</ListView>